Checklist spacing fix.

--- a/Forkdown.Html/Resources/Output/Less/03_checklist.less
+++ b/Forkdown.Html/Resources/Output/Less/03_checklist.less
@@ -25,7 +25,7 @@ ul, ol {
       display: flex;
       flex-direction: row;
       margin-left: 0;
-      & > .fd_column.fd_checkbox {
+      & > .fd_checkbox {
         min-width: @indent;
         text-align: left;
         & > input[type="checkbox"] {
@@ -39,7 +39,7 @@ ul, ol {
   }
 }
 
-ol.fd_checklist li > .fd_content.fd_column {
+ol.fd_checklist li > .fd_content {
   display: list-item;
   list-style-type: decimal;
   margin-left: @indent;
